parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr finins
Rule 5     instruccion -> declaracion_instr finins
Rule 6     instruccion -> asignacion_instr finins
Rule 7     instruccion -> if_instr
Rule 8     instruccion -> while_instr
Rule 9     instruccion -> break_instr finins
Rule 10    instruccion -> main_instr
Rule 11    instruccion -> funcion_instr
Rule 12    instruccion -> llamada_instr finins
Rule 13    instruccion -> return_instr finins
Rule 14    finins -> PUNTOCOMA
Rule 15    finins -> <empty>
Rule 16    instruccion -> error PUNTOCOMA
Rule 17    imprimir_instr -> RPRINT PARA expresion PARC
Rule 18    declaracion_instr -> RVar ID IGUAL expresion
Rule 19    declaracion_instr -> RVar ID
Rule 20    asignacion_instr -> ID IGUAL expresion
Rule 21    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 22    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
Rule 23    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
Rule 24    while_instr -> RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 25    break_instr -> RBREAK
Rule 26    main_instr -> RMAIN PARA PARC LLAVEA instrucciones LLAVEC
Rule 27    funcion_instr -> RFUNC ID PARA parametros PARC LLAVEA instrucciones LLAVEC
Rule 28    funcion_instr -> RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
Rule 29    parametros -> parametros COMA parametro
Rule 30    parametros -> parametro
Rule 31    parametro -> tipo ID
Rule 32    llamada_instr -> ID PARA PARC
Rule 33    llamada_instr -> ID PARA parametros_llamada PARC
Rule 34    parametros_llamada -> parametros_llamada COMA parametro_llamada
Rule 35    parametros_llamada -> parametro_llamada
Rule 36    parametro_llamada -> expresion
Rule 37    return_instr -> RRETURN expresion
Rule 38    tipo -> RINT
Rule 39    tipo -> RFLOAT
Rule 40    tipo -> RSTRING
Rule 41    tipo -> RBOOLEAN
Rule 42    expresion -> expresion MAS expresion
Rule 43    expresion -> expresion MENOS expresion
Rule 44    expresion -> expresion POR expresion
Rule 45    expresion -> expresion DIVI expresion
Rule 46    expresion -> expresion ELEV expresion
Rule 47    expresion -> expresion MENORQUE expresion
Rule 48    expresion -> expresion MAYORQUE expresion
Rule 49    expresion -> expresion IGUALIGUAL expresion
Rule 50    expresion -> expresion IGUALDIF expresion
Rule 51    expresion -> expresion MENORIGUALL expresion
Rule 52    expresion -> expresion MAYORIGUALL expresion
Rule 53    expresion -> expresion AND expresion
Rule 54    expresion -> expresion OR expresion
Rule 55    expresion -> MENOS expresion
Rule 56    expresion -> NOT expresion
Rule 57    expresion -> PARA expresion PARC
Rule 58    expresion -> llamada_instr
Rule 59    expresion -> ID
Rule 60    expresion -> ENTERO
Rule 61    expresion -> DECIMAL
Rule 62    expresion -> CHAR
Rule 63    expresion -> CADENA
Rule 64    expresion -> RTRUE
Rule 65    expresion -> RFALSE

Terminals, with rules where they appear

AND                  : 53
CADENA               : 63
CHAR                 : 62
COMA                 : 29 34
DECIMAL              : 61
DIVI                 : 45
ELEV                 : 46
ENTERO               : 60
ID                   : 18 19 20 27 28 31 32 33 59
IGUAL                : 18 20
IGUALDIF             : 50
IGUALIGUAL           : 49
LLAVEA               : 21 22 22 23 24 26 27 28
LLAVEC               : 21 22 22 23 24 26 27 28
MAS                  : 42
MAYORIGUALL          : 52
MAYORQUE             : 48
MENORIGUALL          : 51
MENORQUE             : 47
MENOS                : 43 55
NOT                  : 56
OR                   : 54
PARA                 : 17 21 22 23 24 26 27 28 32 33 57
PARC                 : 17 21 22 23 24 26 27 28 32 33 57
POR                  : 44
PUNTOCOMA            : 14 16
RBOOLEAN             : 41
RBREAK               : 25
RELSE                : 22 23
RFALSE               : 65
RFLOAT               : 39
RFUNC                : 27 28
RIF                  : 21 22 23
RINT                 : 38
RMAIN                : 26
RPRINT               : 17
RRETURN              : 37
RSTRING              : 40
RTRUE                : 64
RVar                 : 18 19
RWHILE               : 24
error                : 16

Nonterminals, with rules where they appear

asignacion_instr     : 6
break_instr          : 9
declaracion_instr    : 5
expresion            : 17 18 20 21 22 23 24 36 37 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 56 57
finins               : 4 5 6 9 12 13
funcion_instr        : 11
if_instr             : 7 23
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 21 22 22 23 24 26 27 28
llamada_instr        : 12 58
main_instr           : 10
parametro            : 29 30
parametro_llamada    : 34 35
parametros           : 27 29
parametros_llamada   : 33 34
return_instr         : 13
tipo                 : 31
while_instr          : 8

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . declaracion_instr finins
    (6) instruccion -> . asignacion_instr finins
    (7) instruccion -> . if_instr
    (8) instruccion -> . while_instr
    (9) instruccion -> . break_instr finins
    (10) instruccion -> . main_instr
    (11) instruccion -> . funcion_instr
    (12) instruccion -> . llamada_instr finins
    (13) instruccion -> . return_instr finins
    (16) instruccion -> . error PUNTOCOMA
    (17) imprimir_instr -> . RPRINT PARA expresion PARC
    (18) declaracion_instr -> . RVar ID IGUAL expresion
    (19) declaracion_instr -> . RVar ID
    (20) asignacion_instr -> . ID IGUAL expresion
    (21) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (22) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (23) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
    (24) while_instr -> . RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
    (25) break_instr -> . RBREAK
    (26) main_instr -> . RMAIN PARA PARC LLAVEA instrucciones LLAVEC
    (27) funcion_instr -> . RFUNC ID PARA parametros PARC LLAVEA instrucciones LLAVEC
    (28) funcion_instr -> . RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
    (32) llamada_instr -> . ID PARA PARC
    (33) llamada_instr -> . ID PARA parametros_llamada PARC
    (37) return_instr -> . RRETURN expresion

    error           shift and go to state 14
    RPRINT          shift and go to state 15
    RVar            shift and go to state 16
    ID              shift and go to state 17
    RIF             shift and go to state 18
    RWHILE          shift and go to state 19
    RBREAK          shift and go to state 20
    RMAIN           shift and go to state 21
    RFUNC           shift and go to state 22
    RRETURN         shift and go to state 23

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    while_instr                    shift and go to state 8
    break_instr                    shift and go to state 9
    main_instr                     shift and go to state 10
    funcion_instr                  shift and go to state 11
    llamada_instr                  shift and go to state 12
    return_instr                   shift and go to state 13

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . declaracion_instr finins
    (6) instruccion -> . asignacion_instr finins
    (7) instruccion -> . if_instr
    (8) instruccion -> . while_instr
    (9) instruccion -> . break_instr finins
    (10) instruccion -> . main_instr
    (11) instruccion -> . funcion_instr
    (12) instruccion -> . llamada_instr finins
    (13) instruccion -> . return_instr finins
    (16) instruccion -> . error PUNTOCOMA
    (17) imprimir_instr -> . RPRINT PARA expresion PARC
    (18) declaracion_instr -> . RVar ID IGUAL expresion
    (19) declaracion_instr -> . RVar ID
    (20) asignacion_instr -> . ID IGUAL expresion
    (21) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (22) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (23) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
    (24) while_instr -> . RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
    (25) break_instr -> . RBREAK
    (26) main_instr -> . RMAIN PARA PARC LLAVEA instrucciones LLAVEC
    (27) funcion_instr -> . RFUNC ID PARA parametros PARC LLAVEA instrucciones LLAVEC
    (28) funcion_instr -> . RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
    (32) llamada_instr -> . ID PARA PARC
    (33) llamada_instr -> . ID PARA parametros_llamada PARC
    (37) return_instr -> . RRETURN expresion

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 14
    RPRINT          shift and go to state 15
    RVar            shift and go to state 16
    ID              shift and go to state 17
    RIF             shift and go to state 18
    RWHILE          shift and go to state 19
    RBREAK          shift and go to state 20
    RMAIN           shift and go to state 21
    RFUNC           shift and go to state 22
    RRETURN         shift and go to state 23

    instruccion                    shift and go to state 24
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    while_instr                    shift and go to state 8
    break_instr                    shift and go to state 9
    main_instr                     shift and go to state 10
    funcion_instr                  shift and go to state 11
    llamada_instr                  shift and go to state 12
    return_instr                   shift and go to state 13

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    RVar            reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RMAIN           reduce using rule 3 (instrucciones -> instruccion .)
    RFUNC           reduce using rule 3 (instrucciones -> instruccion .)
    RRETURN         reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEC          reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr . finins
    (14) finins -> . PUNTOCOMA
    (15) finins -> .

    PUNTOCOMA       shift and go to state 26
    error           reduce using rule 15 (finins -> .)
    RPRINT          reduce using rule 15 (finins -> .)
    RVar            reduce using rule 15 (finins -> .)
    ID              reduce using rule 15 (finins -> .)
    RIF             reduce using rule 15 (finins -> .)
    RWHILE          reduce using rule 15 (finins -> .)
    RBREAK          reduce using rule 15 (finins -> .)
    RMAIN           reduce using rule 15 (finins -> .)
    RFUNC           reduce using rule 15 (finins -> .)
    RRETURN         reduce using rule 15 (finins -> .)
    $end            reduce using rule 15 (finins -> .)
    LLAVEC          reduce using rule 15 (finins -> .)

    finins                         shift and go to state 25

state 5

    (5) instruccion -> declaracion_instr . finins
    (14) finins -> . PUNTOCOMA
    (15) finins -> .

    PUNTOCOMA       shift and go to state 26
    error           reduce using rule 15 (finins -> .)
    RPRINT          reduce using rule 15 (finins -> .)
    RVar            reduce using rule 15 (finins -> .)
    ID              reduce using rule 15 (finins -> .)
    RIF             reduce using rule 15 (finins -> .)
    RWHILE          reduce using rule 15 (finins -> .)
    RBREAK          reduce using rule 15 (finins -> .)
    RMAIN           reduce using rule 15 (finins -> .)
    RFUNC           reduce using rule 15 (finins -> .)
    RRETURN         reduce using rule 15 (finins -> .)
    $end            reduce using rule 15 (finins -> .)
    LLAVEC          reduce using rule 15 (finins -> .)

    finins                         shift and go to state 27

state 6

    (6) instruccion -> asignacion_instr . finins
    (14) finins -> . PUNTOCOMA
    (15) finins -> .

    PUNTOCOMA       shift and go to state 26
    error           reduce using rule 15 (finins -> .)
    RPRINT          reduce using rule 15 (finins -> .)
    RVar            reduce using rule 15 (finins -> .)
    ID              reduce using rule 15 (finins -> .)
    RIF             reduce using rule 15 (finins -> .)
    RWHILE          reduce using rule 15 (finins -> .)
    RBREAK          reduce using rule 15 (finins -> .)
    RMAIN           reduce using rule 15 (finins -> .)
    RFUNC           reduce using rule 15 (finins -> .)
    RRETURN         reduce using rule 15 (finins -> .)
    $end            reduce using rule 15 (finins -> .)
    LLAVEC          reduce using rule 15 (finins -> .)

    finins                         shift and go to state 28

state 7

    (7) instruccion -> if_instr .

    error           reduce using rule 7 (instruccion -> if_instr .)
    RPRINT          reduce using rule 7 (instruccion -> if_instr .)
    RVar            reduce using rule 7 (instruccion -> if_instr .)
    ID              reduce using rule 7 (instruccion -> if_instr .)
    RIF             reduce using rule 7 (instruccion -> if_instr .)
    RWHILE          reduce using rule 7 (instruccion -> if_instr .)
    RBREAK          reduce using rule 7 (instruccion -> if_instr .)
    RMAIN           reduce using rule 7 (instruccion -> if_instr .)
    RFUNC           reduce using rule 7 (instruccion -> if_instr .)
    RRETURN         reduce using rule 7 (instruccion -> if_instr .)
    $end            reduce using rule 7 (instruccion -> if_instr .)
    LLAVEC          reduce using rule 7 (instruccion -> if_instr .)


state 8

    (8) instruccion -> while_instr .

    error           reduce using rule 8 (instruccion -> while_instr .)
    RPRINT          reduce using rule 8 (instruccion -> while_instr .)
    RVar            reduce using rule 8 (instruccion -> while_instr .)
    ID              reduce using rule 8 (instruccion -> while_instr .)
    RIF             reduce using rule 8 (instruccion -> while_instr .)
    RWHILE          reduce using rule 8 (instruccion -> while_instr .)
    RBREAK          reduce using rule 8 (instruccion -> while_instr .)
    RMAIN           reduce using rule 8 (instruccion -> while_instr .)
    RFUNC           reduce using rule 8 (instruccion -> while_instr .)
    RRETURN         reduce using rule 8 (instruccion -> while_instr .)
    $end            reduce using rule 8 (instruccion -> while_instr .)
    LLAVEC          reduce using rule 8 (instruccion -> while_instr .)


state 9

    (9) instruccion -> break_instr . finins
    (14) finins -> . PUNTOCOMA
    (15) finins -> .

    PUNTOCOMA       shift and go to state 26
    error           reduce using rule 15 (finins -> .)
    RPRINT          reduce using rule 15 (finins -> .)
    RVar            reduce using rule 15 (finins -> .)
    ID              reduce using rule 15 (finins -> .)
    RIF             reduce using rule 15 (finins -> .)
    RWHILE          reduce using rule 15 (finins -> .)
    RBREAK          reduce using rule 15 (finins -> .)
    RMAIN           reduce using rule 15 (finins -> .)
    RFUNC           reduce using rule 15 (finins -> .)
    RRETURN         reduce using rule 15 (finins -> .)
    $end            reduce using rule 15 (finins -> .)
    LLAVEC          reduce using rule 15 (finins -> .)

    finins                         shift and go to state 29

state 10

    (10) instruccion -> main_instr .

    error           reduce using rule 10 (instruccion -> main_instr .)
    RPRINT          reduce using rule 10 (instruccion -> main_instr .)
    RVar            reduce using rule 10 (instruccion -> main_instr .)
    ID              reduce using rule 10 (instruccion -> main_instr .)
    RIF             reduce using rule 10 (instruccion -> main_instr .)
    RWHILE          reduce using rule 10 (instruccion -> main_instr .)
    RBREAK          reduce using rule 10 (instruccion -> main_instr .)
    RMAIN           reduce using rule 10 (instruccion -> main_instr .)
    RFUNC           reduce using rule 10 (instruccion -> main_instr .)
    RRETURN         reduce using rule 10 (instruccion -> main_instr .)
    $end            reduce using rule 10 (instruccion -> main_instr .)
    LLAVEC          reduce using rule 10 (instruccion -> main_instr .)


state 11

    (11) instruccion -> funcion_instr .

    error           reduce using rule 11 (instruccion -> funcion_instr .)
    RPRINT          reduce using rule 11 (instruccion -> funcion_instr .)
    RVar            reduce using rule 11 (instruccion -> funcion_instr .)
    ID              reduce using rule 11 (instruccion -> funcion_instr .)
    RIF             reduce using rule 11 (instruccion -> funcion_instr .)
    RWHILE          reduce using rule 11 (instruccion -> funcion_instr .)
    RBREAK          reduce using rule 11 (instruccion -> funcion_instr .)
    RMAIN           reduce using rule 11 (instruccion -> funcion_instr .)
    RFUNC           reduce using rule 11 (instruccion -> funcion_instr .)
    RRETURN         reduce using rule 11 (instruccion -> funcion_instr .)
    $end            reduce using rule 11 (instruccion -> funcion_instr .)
    LLAVEC          reduce using rule 11 (instruccion -> funcion_instr .)


state 12

    (12) instruccion -> llamada_instr . finins
    (14) finins -> . PUNTOCOMA
    (15) finins -> .

    PUNTOCOMA       shift and go to state 26
    error           reduce using rule 15 (finins -> .)
    RPRINT          reduce using rule 15 (finins -> .)
    RVar            reduce using rule 15 (finins -> .)
    ID              reduce using rule 15 (finins -> .)
    RIF             reduce using rule 15 (finins -> .)
    RWHILE          reduce using rule 15 (finins -> .)
    RBREAK          reduce using rule 15 (finins -> .)
    RMAIN           reduce using rule 15 (finins -> .)
    RFUNC           reduce using rule 15 (finins -> .)
    RRETURN         reduce using rule 15 (finins -> .)
    $end            reduce using rule 15 (finins -> .)
    LLAVEC          reduce using rule 15 (finins -> .)

    finins                         shift and go to state 30

state 13

    (13) instruccion -> return_instr . finins
    (14) finins -> . PUNTOCOMA
    (15) finins -> .

    PUNTOCOMA       shift and go to state 26
    error           reduce using rule 15 (finins -> .)
    RPRINT          reduce using rule 15 (finins -> .)
    RVar            reduce using rule 15 (finins -> .)
    ID              reduce using rule 15 (finins -> .)
    RIF             reduce using rule 15 (finins -> .)
    RWHILE          reduce using rule 15 (finins -> .)
    RBREAK          reduce using rule 15 (finins -> .)
    RMAIN           reduce using rule 15 (finins -> .)
    RFUNC           reduce using rule 15 (finins -> .)
    RRETURN         reduce using rule 15 (finins -> .)
    $end            reduce using rule 15 (finins -> .)
    LLAVEC          reduce using rule 15 (finins -> .)

    finins                         shift and go to state 31

state 14

    (16) instruccion -> error . PUNTOCOMA

    PUNTOCOMA       shift and go to state 32


state 15

    (17) imprimir_instr -> RPRINT . PARA expresion PARC

    PARA            shift and go to state 33


state 16

    (18) declaracion_instr -> RVar . ID IGUAL expresion
    (19) declaracion_instr -> RVar . ID

    ID              shift and go to state 34


state 17

    (20) asignacion_instr -> ID . IGUAL expresion
    (32) llamada_instr -> ID . PARA PARC
    (33) llamada_instr -> ID . PARA parametros_llamada PARC

    IGUAL           shift and go to state 35
    PARA            shift and go to state 36


state 18

    (21) if_instr -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC
    (22) if_instr -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (23) if_instr -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr

    PARA            shift and go to state 37


state 19

    (24) while_instr -> RWHILE . PARA expresion PARC LLAVEA instrucciones LLAVEC

    PARA            shift and go to state 38


state 20

    (25) break_instr -> RBREAK .

    PUNTOCOMA       reduce using rule 25 (break_instr -> RBREAK .)
    error           reduce using rule 25 (break_instr -> RBREAK .)
    RPRINT          reduce using rule 25 (break_instr -> RBREAK .)
    RVar            reduce using rule 25 (break_instr -> RBREAK .)
    ID              reduce using rule 25 (break_instr -> RBREAK .)
    RIF             reduce using rule 25 (break_instr -> RBREAK .)
    RWHILE          reduce using rule 25 (break_instr -> RBREAK .)
    RBREAK          reduce using rule 25 (break_instr -> RBREAK .)
    RMAIN           reduce using rule 25 (break_instr -> RBREAK .)
    RFUNC           reduce using rule 25 (break_instr -> RBREAK .)
    RRETURN         reduce using rule 25 (break_instr -> RBREAK .)
    $end            reduce using rule 25 (break_instr -> RBREAK .)
    LLAVEC          reduce using rule 25 (break_instr -> RBREAK .)


state 21

    (26) main_instr -> RMAIN . PARA PARC LLAVEA instrucciones LLAVEC

    PARA            shift and go to state 39


state 22

    (27) funcion_instr -> RFUNC . ID PARA parametros PARC LLAVEA instrucciones LLAVEC
    (28) funcion_instr -> RFUNC . ID PARA PARC LLAVEA instrucciones LLAVEC

    ID              shift and go to state 40


state 23

    (37) return_instr -> RRETURN . expresion
    (42) expresion -> . expresion MAS expresion
    (43) expresion -> . expresion MENOS expresion
    (44) expresion -> . expresion POR expresion
    (45) expresion -> . expresion DIVI expresion
    (46) expresion -> . expresion ELEV expresion
    (47) expresion -> . expresion MENORQUE expresion
    (48) expresion -> . expresion MAYORQUE expresion
    (49) expresion -> . expresion IGUALIGUAL expresion
    (50) expresion -> . expresion IGUALDIF expresion
    (51) expresion -> . expresion MENORIGUALL expresion
    (52) expresion -> . expresion MAYORIGUALL expresion
    (53) expresion -> . expresion AND expresion
    (54) expresion -> . expresion OR expresion
    (55) expresion -> . MENOS expresion
    (56) expresion -> . NOT expresion
    (57) expresion -> . PARA expresion PARC
    (58) expresion -> . llamada_instr
    (59) expresion -> . ID
    (60) expresion -> . ENTERO
    (61) expresion -> . DECIMAL
    (62) expresion -> . CHAR
    (63) expresion -> . CADENA
    (64) expresion -> . RTRUE
    (65) expresion -> . RFALSE
    (32) llamada_instr -> . ID PARA PARC
    (33) llamada_instr -> . ID PARA parametros_llamada PARC

    MENOS           shift and go to state 42
    NOT             shift and go to state 43
    PARA            shift and go to state 44
    ID              shift and go to state 46
    ENTERO          shift and go to state 47
    DECIMAL         shift and go to state 48
    CHAR            shift and go to state 49
    CADENA          shift and go to state 50
    RTRUE           shift and go to state 51
    RFALSE          shift and go to state 52

    expresion                      shift and go to state 41
    llamada_instr                  shift and go to state 45

state 24

    (2) instrucciones -> instrucciones instruccion .

    error           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RPRINT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RVar            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RIF             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RWHILE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RBREAK          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RMAIN           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RFUNC           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RRETURN         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVEC          reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 25

    (4) instruccion -> imprimir_instr finins .

    error           reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RPRINT          reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RVar            reduce using rule 4 (instruccion -> imprimir_instr finins .)
    ID              reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RIF             reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RWHILE          reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RBREAK          reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RMAIN           reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RFUNC           reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RRETURN         reduce using rule 4 (instruccion -> imprimir_instr finins .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr finins .)
    LLAVEC          reduce using rule 4 (instruccion -> imprimir_instr finins .)


state 26

    (14) finins -> PUNTOCOMA .

    error           reduce using rule 14 (finins -> PUNTOCOMA .)
    RPRINT          reduce using rule 14 (finins -> PUNTOCOMA .)
    RVar            reduce using rule 14 (finins -> PUNTOCOMA .)
    ID              reduce using rule 14 (finins -> PUNTOCOMA .)
    RIF             reduce using rule 14 (finins -> PUNTOCOMA .)
    RWHILE          reduce using rule 14 (finins -> PUNTOCOMA .)
    RBREAK          reduce using rule 14 (finins -> PUNTOCOMA .)
    RMAIN           reduce using rule 14 (finins -> PUNTOCOMA .)
    RFUNC           reduce using rule 14 (finins -> PUNTOCOMA .)
    RRETURN         reduce using rule 14 (finins -> PUNTOCOMA .)
    $end            reduce using rule 14 (finins -> PUNTOCOMA .)
    LLAVEC          reduce using rule 14 (finins -> PUNTOCOMA .)


state 27

    (5) instruccion -> declaracion_instr finins .

    error           reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RPRINT          reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RVar            reduce using rule 5 (instruccion -> declaracion_instr finins .)
    ID              reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RIF             reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RWHILE          reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RBREAK          reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RMAIN           reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RFUNC           reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RRETURN         reduce using rule 5 (instruccion -> declaracion_instr finins .)
    $end            reduce using rule 5 (instruccion -> declaracion_instr finins .)
    LLAVEC          reduce using rule 5 (instruccion -> declaracion_instr finins .)


state 28

    (6) instruccion -> asignacion_instr finins .

    error           reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RPRINT          reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RVar            reduce using rule 6 (instruccion -> asignacion_instr finins .)
    ID              reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RIF             reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RWHILE          reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RBREAK          reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RMAIN           reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RFUNC           reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RRETURN         reduce using rule 6 (instruccion -> asignacion_instr finins .)
    $end            reduce using rule 6 (instruccion -> asignacion_instr finins .)
    LLAVEC          reduce using rule 6 (instruccion -> asignacion_instr finins .)


state 29

    (9) instruccion -> break_instr finins .

    error           reduce using rule 9 (instruccion -> break_instr finins .)
    RPRINT          reduce using rule 9 (instruccion -> break_instr finins .)
    RVar            reduce using rule 9 (instruccion -> break_instr finins .)
    ID              reduce using rule 9 (instruccion -> break_instr finins .)
    RIF             reduce using rule 9 (instruccion -> break_instr finins .)
    RWHILE          reduce using rule 9 (instruccion -> break_instr finins .)
    RBREAK          reduce using rule 9 (instruccion -> break_instr finins .)
    RMAIN           reduce using rule 9 (instruccion -> break_instr finins .)
    RFUNC           reduce using rule 9 (instruccion -> break_instr finins .)
    RRETURN         reduce using rule 9 (instruccion -> break_instr finins .)
    $end            reduce using rule 9 (instruccion -> break_instr finins .)
    LLAVEC          reduce using rule 9 (instruccion -> break_instr finins .)


state 30

    (12) instruccion -> llamada_instr finins .

    error           reduce using rule 12 (instruccion -> llamada_instr finins .)
    RPRINT          reduce using rule 12 (instruccion -> llamada_instr finins .)
    RVar            reduce using rule 12 (instruccion -> llamada_instr finins .)
    ID              reduce using rule 12 (instruccion -> llamada_instr finins .)
    RIF             reduce using rule 12 (instruccion -> llamada_instr finins .)
    RWHILE          reduce using rule 12 (instruccion -> llamada_instr finins .)
    RBREAK          reduce using rule 12 (instruccion -> llamada_instr finins .)
    RMAIN           reduce using rule 12 (instruccion -> llamada_instr finins .)
    RFUNC           reduce using rule 12 (instruccion -> llamada_instr finins .)
    RRETURN         reduce using rule 12 (instruccion -> llamada_instr finins .)
    $end            reduce using rule 12 (instruccion -> llamada_instr finins .)
    LLAVEC          reduce using rule 12 (instruccion -> llamada_instr finins .)


state 31

    (13) instruccion -> return_instr finins .

    error           reduce using rule 13 (instruccion -> return_instr finins .)
    RPRINT          reduce using rule 13 (instruccion -> return_instr finins .)
    RVar            reduce using rule 13 (instruccion -> return_instr finins .)
    ID              reduce using rule 13 (instruccion -> return_instr finins .)
    RIF             reduce using rule 13 (instruccion -> return_instr finins .)
    RWHILE          reduce using rule 13 (instruccion -> return_instr finins .)
    RBREAK          reduce using rule 13 (instruccion -> return_instr finins .)
    RMAIN           reduce using rule 13 (instruccion -> return_instr finins .)
    RFUNC           reduce using rule 13 (instruccion -> return_instr finins .)
    RRETURN         reduce using rule 13 (instruccion -> return_instr finins .)
    $end            reduce using rule 13 (instruccion -> return_instr finins .)
    LLAVEC          reduce using rule 13 (instruccion -> return_instr finins .)


state 32

    (16) instruccion -> error PUNTOCOMA .

    error           reduce using rule 16 (instruccion -> error PUNTOCOMA .)
    RPRINT          reduce using rule 16 (instruccion -> error PUNTOCOMA .)
    RVar            reduce using rule 16 (instruccion -> error PUNTOCOMA .)
    ID              reduce using rule 16 (instruccion -> error PUNTOCOMA .)
    RIF             reduce using rule 16 (instruccion -> error PUNTOCOMA .)
    RWHILE          reduce using rule 16 (instruccion -> error PUNTOCOMA .)
    RBREAK          reduce using rule 16 (instruccion -> error PUNTOCOMA .)
    RMAIN           reduce using rule 16 (instruccion -> error PUNTOCOMA .)
    RFUNC           reduce using rule 16 (instruccion -> error PUNTOCOMA .)
    RRETURN         reduce using rule 16 (instruccion -> error PUNTOCOMA .)
    $end            reduce using rule 16 (instruccion -> error PUNTOCOMA .)
    LLAVEC          reduce using rule 16 (instruccion -> error PUNTOCOMA .)


state 33
